--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Wen</title>
   <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=10.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <link rel="icon" href="flower.ico" type="image/x-icon" />
   <link href="stylesheet.css" rel="stylesheet" type="text/css">
 
 <style type="text/css">
