--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div id="name"><a>About</a></div>
 
       <div class="item">
-         <a class="blurb">Wen is a binchass who finds gold in the oddest places hit her up at 022-367-3456, i repeat that's 022-367-3456 and if u cant catch her you can always leave a msg.</a>
+         <a class="blurb">Wen's version of the site has her real info (this is the one still residing on Theia's computer).</a>
          <!-- <img class="image" src="assets/wen.JPG"> -->
       </div>
 
